# zvec-rs

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  HANDOFF.md  README.md  build.rs
.github/workflows/: ci.yml  release.yml  update-vendor.yml
examples/: basic.rs
include/zvec/: c_api.h
zvec-rs/: Cargo.toml  README.md
zvec-rs/examples/: wrapper-basic.rs
zvec-rs/src/: builder.rs  lib.rs
