[package]
name = "zvec-rs"
version = "0.1.0"
edition = "2021"
description = "Safe Rust wrappers for the zvec in-process vector database"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/ZephyrCloudIO/zvec-rs"

[dependencies]
zvec = { path = ".." }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
